logging and security(jwt token)